3 August 2007: Wouter
	- replanning.
	- scrubber check section of lame NS set.
	- trust anchors can be in config file or read from zone file,
	  DS and DNSKEY entries.
	- unit test trust anchor storage.

2 August 2007: Wouter
	- configure change for latest libevent trunk version (needs -lrt).
	- query_done and walk_supers are moved out of module interface.
	- fixup delegation point duplicates.
	- fixup iterator scrubber; lame NS set is let through the scrubber
	  so that the classification is lame.
	- validator module exists, and does nothing but pass through,
	  with calling of next module and return.
	- validator work.

1 August 2007: Wouter
	- set version to 0.5
	- module work for module to module interconnections.
	- config of modules.
	- detect cycle takes flags.

31 July 2007: Wouter
	- updated plan
	- release 0.4 tag.

30 July 2007: Wouter
	- changed random state init, so that sequential process IDs are not
	  cancelled out by sequential thread-ids in the random number seed.
	- the fwd_three test, which sends three queries to unbound, and 
	  unbound is kept waiting by ldns-testns for 3 seconds, failed
	  because the retry timeout for default by unbound is 3 seconds too,
	  it would hit that timeout and fail the test. Changed so that unbound
	  is kept waiting for 2 seconds instead.

27 July 2007: Wouter
	- removed useless -C debug option. It did not work.
	- text edit of documentation.
	- added doc/CREDITS file, referred to by the manpages.
	- updated planning.

26 July 2007: Wouter
	- cycle detection, for query state dependencies. Will attempt to
	  circumvent the cycle, but if no other targets available fails.
	- unit test for AXFR, IXFR response.
	- test for cycle detection.

25 July 2007: Wouter
	- testbound read ADDRESS and check it.
	- test for version.bind and friends.
	- test for iterator chaining through several referrals.
	- test and fixup for refetch for glue. Refetch fails if glue
	  is still not provided.

24 July 2007: Wouter